package gb.interfaces.animals;

public interface Fly {

    void fly();
}
