package gb.interfaces.animals;

public interface Train {
    void train();
}
